--- a/CF.Application/CF.Application.csproj
+++ b/CF.Application/CF.Application.csproj
@@ -17,6 +17,7 @@
 	  <PackageReference Include="SQLitePCLRaw.bundle_green" Version="2.1.11" />
 	  <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="9.0.7" />
 	  <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.5" />
+	  <PackageReference Include="MySqlConnector" Version="2.4.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CF.Domain\CF.Domain.csproj" />
