--- a/CF.Data/CF.Data.csproj
+++ b/CF.Data/CF.Data.csproj
@@ -13,6 +13,7 @@
 	  <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.9" />
 	  <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.5" />
 	  <PackageReference Include="Microsoft.Data.SqlClient" Version="6.1.1" />
+	  <PackageReference Include="MySqlConnector" Version="2.4.0" />
 	  <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
 	  <PackageReference Include="SQLitePCLRaw.bundle_green" Version="2.1.11" />
 	  <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="9.0.7" />
