Removido tela antiga OperacaoFinanceira. Add novo layout para representar as informações operacao financeira

--- a/ControleFinanceiro/ControleFinanceiro.csproj
+++ b/ControleFinanceiro/ControleFinanceiro.csproj
@@ -15,6 +15,7 @@
   <ItemGroup>
     <None Remove="Telas\CadastroOperacaoDialog.xaml" />
     <None Remove="Telas\CategoriaPage.xaml" />
+    <None Remove="Telas\OperacaoPage.xaml" />
     <None Remove="Themes\Colors.xaml" />
   </ItemGroup>
   <ItemGroup>
@@ -56,9 +57,6 @@
     <Folder Include="Styles\" />
   </ItemGroup>
   <ItemGroup>
-    <Page Update="Telas\OperacaoFinanceiraPage.xaml">
-      <SubType>Designer</SubType>
-    </Page>
     <Page Update="Telas\EntidadePage.xaml">
       <SubType>Designer</SubType>
     </Page>
@@ -66,6 +64,9 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Update="Telas\CadastroOperacaoDialog.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Update="Telas\OperacaoPage.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <None Update="Themes\Generic.xaml">
