--- a/ControleFinanceiro/ControleFinanceiro.csproj
+++ b/ControleFinanceiro/ControleFinanceiro.csproj
@@ -48,6 +48,7 @@
     <PackageReference Include="CommunityToolkit.WinUI.UI.Controls.DataGrid" Version="7.1.2" />
     <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.26100.6584" />
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.8.250916003" />
+    <PackageReference Include="MySql.Data" Version="9.4.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CF.Domain\CF.Domain.csproj" />
