Add estrutura base para as notificações

--- a/CF.Application/CF.Application.csproj
+++ b/CF.Application/CF.Application.csproj
@@ -23,5 +23,8 @@
     <ProjectReference Include="..\CF.Domain\CF.Domain.csproj" />
     <ProjectReference Include="..\CF.InfraData\CF.InfraData.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
   
 </Project>
