--- a/ControleFinanceiro/ControleFinanceiro.csproj
+++ b/ControleFinanceiro/ControleFinanceiro.csproj
@@ -70,6 +70,9 @@
     <Page Update="Telas\OperacaoPage.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Update="Componentes\NotificacaoUserControl.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <None Update="Themes\Generic.xaml">
       <Generator>MSBuild:Compile</Generator>
     </None>
